<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_name">Avengers</string>
    <string name="password">Enter Password</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="button_text">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>